# project_last

./: .gitignore  README.md  build_exe.bat  build_exe.ps1  pyproject.toml  run.py
.github/workflows/: build-desktop.yml
src/co2_control_app/: __init__.py  __main__.py  controller.py  logger.py  main.py  models.py  transports.py
src/co2_control_app/ui/: graph_widget.py  log_window.py  main_window.py
tests/: test_auto_mode.py  test_validation.py
