[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "co2-control-app"
version = "0.1.0"
description = "Desktop control application for an experimental CO2 air purification unit."
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
    "PySide6>=6.8",
    "pyserial>=3.5",
]

[project.optional-dependencies]
build = [
    "pyinstaller>=6.0",
]

[project.scripts]
co2-control-app = "co2_control_app.main:main"

[tool.setuptools.packages.find]
where = ["src"]
